<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#3a3ec1"
    android:orientation="vertical"
    tools:context="com.example.android.rummycounter.MainActivity">

    <TextView
        android:id="@+id/round"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/round"
        android:textAllCaps="true"
        android:textColor="#FFFFFF"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/number_rounds"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:layout_toEndOf="@id/round"
        android:layout_toRightOf="@id/round"
        android:text="@string/rounds"
        android:textColor="#FFFFFF"
        android:textSize="20sp" />


    <ImageView
        android:id="@+id/plus"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:onClick="plus"
        android:layout_margin="8dp"
        android:layout_toRightOf="@id/number_rounds"
        android:src="@drawable/plus" />

    <TextView
        android:id="@+id/best"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_margin="8dp"
        android:paddingBottom="5dp"
        android:text="@string/best"
        android:textAllCaps="true"
        android:textColor="#FFFFFF"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/button1"
        android:textAlignment="center"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_below="@id/best"
        android:layout_toLeftOf="@id/button2"
        android:layout_toRightOf="@id/plus"
        android:layout_toStartOf="@id/button2"
        android:background="@drawable/round_button" />

    <TextView
        android:id="@+id/button2"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_below="@id/best"
        android:layout_toLeftOf="@id/button3"
        android:layout_toRightOf="@id/plus"
        android:layout_toStartOf="@id/button3"
        android:background="@drawable/round_button2" />


    <TextView
        android:id="@+id/button3"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@id/best"
        android:background="@drawable/round_button3" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/button1"
        android:layout_margin="8dp"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="8dp"
            android:layout_weight="1"
            android:background="@drawable/round_layout1">

            <LinearLayout
                android:id="@+id/scoruri1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/pink_temporal_score"
                    android:layout_width="0dp"
                    android:layout_height="65dp"
                    android:layout_margin="3dp"
                    android:layout_weight="1.2"
                    android:alpha="0.7"
                    android:background="@drawable/round"
                    android:gravity="center"
                    android:text="@string/pink_temp_0"
                    android:textColor="@android:color/white"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/pink100"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_margin="3dp"
                    android:layout_weight="1.2"
                    android:alpha="0.7"
                    android:background="@drawable/round_add"
                    android:gravity="center"
                    android:onClick="add_100_pink"
                    android:text="@string/pink_100"
                    android:textColor="#000000"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/pink50"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_margin="3dp"
                    android:layout_weight="1"
                    android:alpha="0.7"
                    android:background="@drawable/round_add"
                    android:gravity="center"
                    android:onClick="add_50_pink"
                    android:text="@string/pink_50"
                    android:textColor="#000000"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/pink10"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_margin="3dp"
                    android:layout_weight="1"
                    android:alpha="0.7"
                    android:background="@drawable/round_add"
                    android:gravity="center"
                    android:onClick="add_10_pink"
                    android:text="@string/pink_10"
                    android:textColor="#000000"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/pink5"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_margin="3dp"
                    android:layout_weight="1"
                    android:alpha="0.7"
                    android:background="@drawable/round_add"
                    android:gravity="center"
                    android:onClick="add_5_pink"
                    android:text="@string/pink_5"
                    android:textColor="#000000"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/pink_player_score"
                    android:layout_width="0dp"
                    android:layout_height="65dp"
                    android:layout_margin="3dp"
                    android:layout_weight="1.2"
                    android:alpha="0.7"
                    android:background="@drawable/round"
                    android:gravity="center"
                    android:text="@string/pink_total_0"
                    android:textColor="@android:color/white"
                    android:textSize="20sp" />

            </LinearLayout>

            <Button
                android:id="@+id/pink_reset"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/scoruri1"
                android:layout_margin="10dp"
                android:background="@android:color/transparent"
                android:onClick="reset_pink"
                android:text="@string/reset_pink"

                />

            <Button
                android:id="@+id/pink_tranfer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_below="@id/scoruri1"
                android:layout_margin="13dp"
                android:background="@android:color/transparent"
                android:onClick="transfer_pink"
                android:text="@string/transfer_pink" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="8dp"
            android:layout_weight="1"
            android:background="@drawable/round_layout2">

            <LinearLayout
                android:id="@+id/scoruri2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/yellow_temporal_score"
                    android:layout_width="0dp"
                    android:layout_height="65dp"
                    android:layout_margin="3dp"
                    android:layout_weight="1.2"
                    android:alpha="0.7"
                    android:background="@drawable/round"
                    android:gravity="center"
                    android:text="@string/yellow_temp_0"
                    android:textColor="@android:color/white"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_margin="3dp"
                    android:layout_weight="1"
                    android:alpha="0.7"
                    android:background="@drawable/round_add"
                    android:gravity="center"
                    android:onClick="add_100_yellow"
                    android:text="@string/yellow_100"
                    android:textColor="#000000"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_margin="3dp"
                    android:layout_weight="1"
                    android:alpha="0.7"
                    android:background="@drawable/round_add"
                    android:gravity="center"
                    android:onClick="add_50_yellow"
                    android:text="@string/yellow_50"
                    android:textColor="#000000"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_margin="3dp"
                    android:layout_weight="1"
                    android:alpha="0.7"
                    android:background="@drawable/round_add"
                    android:gravity="center"
                    android:onClick="add_10_yellow"
                    android:text="@string/yellow_10"
                    android:textColor="#000000"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_margin="3dp"
                    android:layout_weight="1"
                    android:alpha="0.7"
                    android:background="@drawable/round_add"
                    android:gravity="center"
                    android:onClick="add_5_yellow"
                    android:text="@string/yellow_5"
                    android:textColor="#000000"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/yellow_player_score"
                    android:layout_width="0dp"
                    android:layout_height="65dp"
                    android:layout_margin="3dp"
                    android:layout_weight="1.2"
                    android:alpha="0.7"
                    android:background="@drawable/round"
                    android:gravity="center"
                    android:text="@string/yellow_total_0"
                    android:textColor="@android:color/white"
                    android:textSize="20sp" />

            </LinearLayout>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/scoruri2"
                android:layout_margin="10dp"
                android:background="@android:color/transparent"
                android:onClick="reset_yellow"
                android:text="@string/reset_yellow"

                />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_below="@id/scoruri2"
                android:layout_margin="13dp"
                android:background="@android:color/transparent"
                android:onClick="transfer_yellow"
                android:text="@string/transfer_yellow" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="8dp"
            android:layout_weight="1"
            android:background="@drawable/round_layout3">

            <LinearLayout
                android:id="@+id/scoruri3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/green_temporal_score"
                    android:layout_width="0dp"
                    android:layout_height="65dp"
                    android:layout_margin="3dp"
                    android:layout_weight="1.2"
                    android:alpha="0.7"
                    android:background="@drawable/round"
                    android:gravity="center"
                    android:text="@string/green_temp_0"
                    android:textColor="@android:color/white"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_margin="3dp"
                    android:layout_weight="1"
                    android:alpha="0.7"
                    android:background="@drawable/round_add"
                    android:gravity="center"
                    android:onClick="add_100_green"
                    android:text="@string/green_100"
                    android:textColor="#000000"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_margin="3dp"
                    android:layout_weight="1"
                    android:alpha="0.7"
                    android:background="@drawable/round_add"
                    android:gravity="center"
                    android:onClick="add_50_green"
                    android:text="@string/green_50"
                    android:textColor="#000000"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_margin="3dp"
                    android:layout_weight="1"
                    android:alpha="0.7"
                    android:background="@drawable/round_add"
                    android:gravity="center"
                    android:onClick="add_10_green"
                    android:text="@string/green_10"
                    android:textColor="#000000"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_margin="3dp"
                    android:layout_weight="1"
                    android:alpha="0.7"
                    android:background="@drawable/round_add"
                    android:gravity="center"
                    android:onClick="add_5_green"
                    android:text="@string/green_5"
                    android:textColor="#000000"
                    android:textSize="20sp" />

                <TextView

                    android:id="@+id/green_player_score"
                    android:layout_width="0dp"
                    android:layout_height="65dp"
                    android:layout_margin="3dp"
                    android:layout_weight="1.2"
                    android:alpha="0.7"
                    android:background="@drawable/round"
                    android:gravity="center"
                    android:text="@string/green_total_0"
                    android:textColor="@android:color/white"
                    android:textSize="20sp" />

            </LinearLayout>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/scoruri3"
                android:layout_margin="10dp"
                android:background="@android:color/transparent"
                android:onClick="reset_green"
                android:text="@string/reset_green"

                />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_below="@id/scoruri3"
                android:layout_margin="13dp"
                android:background="@android:color/transparent"
                android:onClick="transfer_green"
                android:text="@string/transfer_green" />

        </RelativeLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="#3a3ec1"
            android:onClick="reset_all"
            android:text="@string/reset_all"
            android:textColor="@android:color/white"
            android:textSize="20sp" />

    </LinearLayout>

</RelativeLayout>